objects/vlocity_cmt__ObjectElement__c.object
<CustomObject>
    <description>Represents an element within a section of an object or object type layout. For example, an element may be a control that displays or enables edit of a field or attribute.</description>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryId__c</fullName>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__AttributeCategoryId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Attribute</label>
        <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
        <relationshipLabel>Vlocity Object Section Elements</relationshipLabel>
        <relationshipName>VlocityObjectSectionElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldApiName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this object element. Used to identify the object element across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique object element identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectSectionId__c</fullName>
        <label>Object Section</label>
        <referenceTo>vlocity_cmt__ObjectSection__c</referenceTo>
        <relationshipLabel>Vlocity Object Section Elements</relationshipLabel>
        <relationshipName>VlocityObjectSectionElements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <formula>IF( ISBLANK( vlocity_cmt__AttributeId__c ) ,  IF(  ISBLANK( vlocity_cmt__FieldApiName__c ) , &apos;&apos;, &apos;Field&apos;)   , &apos;Attribute&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Vlocity Object Section Element</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Element Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Object Section Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>